--- a/css/blague.css
+++ b/css/blague.css
@@ -1,9 +1,3 @@
-#pagination {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
 .element-page {
   display: inline-block;
   padding: 6px 12px;
@@ -25,4 +19,28 @@
 
 #catecolor{
   color: white;
+}
+
+/* Masque le texte de pagination sur les écrans plus petits que md */
+@media (max-width: 767.98px) {
+  #paginationText {
+    display: inline-block;
+  }
+
+  #pagination {
+    display: none;
+  }
+}
+
+/* Affiche le texte de pagination sur les écrans plus grands que md */
+@media (min-width: 768px) {
+  #paginationText {
+    display: none;
+  }
+
+  #pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
 }
